# mtcli-workspace

./: .gitignore  LICENSE  README.md  build.bat  dep.bat  deploy.bat  deploy2.bat  nota.bat  r.bat  up.bat
mt/: abev.bat  bbdc.bat  bbse.bat  bova.bat  brent.bat  brml.bat  btcusd.bat  cotto.bat  d1o.bat  default.bat  egie.bat  eurusd.bat  executa-robo.bat  fechamentos.bat  gbpusd.bat  h1.bat  hgbs.bat  highlows.bat  ibov.bat  ieex.bat  ifnc.bat  imat.bat  imob.bat  indx.bat  mm15.bat  mm9.bat  mmd.bat  mmi.bat  mn1.bat  mn1o.bat  mn1v.bat  oscilacoes.bat  perfil.bat  ranges.bat  suzb.bat  trpl.bat  uk100.bat  us100.bat  us30.bat  usdjpy.bat  (+5 more)
mtcli++/: dep.bat
mtcli-deprecated/: a.bat  acerto.bat  ano.bat  atalhos.bat  bbse.bat  be.bat  bova.bat  c.bat  caminho.bat  ccm.bat  checker.bat  cogn.bat  conf.bat  coy.bat  d.bat  d1o.bat  d1v.bat  default.bat  dt.bat  e.bat  eurusd.bat  expectativa.py  f1.bat  ferramentas.bat  ger40.bat  h1.bat  hein.bat  hh1.bat  hk50.bat  hl.bat  how.bat  icon.bat  jp225.bat  lca.bat  leiame.txt  lod.bat  low.bat  lta.bat  m.bat  m10r.bat  (+50 more)
mtcli-dev/: deploy.bat
mtcli-start/: mtcli_start.py  pyproject.toml  test_mtcli_start.py
mtcli-workspace/: brent.bat  coffe.bat  conf.bat  d1.bat  dd1.bat  default.bat  ger30.bat  h4.bat  hk50.bat  icon.bat  indx.bat  m15.bat  mn1.bat  mt5.bat  perfil.bat  smll.bat  test.bat  usdchf.bat  usdx.bat
mtcli-ws/: .gitignore  BZ.BAT  LEIAME.html  MXT.BAT  ORX.bat  TBBDC.BAT  TCOFFEE.BAT  TPETR.BAT  TUSARUS.BAT  _bar.bat  a.bat  ab.bat  ag.bat  aj.bat  ajuda.html  ala.bat  aliases.bat  an.bat  atr.bat  b.bat  (+370 more)
(+1079 files in other folders)
